c-tv/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: c-tv
  labels:
    name: c-tv
    app.kubernetes.io/name: c-tv
    app.kubernetes.io/instance: c-tv
