c-tv/coqui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coqui-server
  namespace: c-tv
  labels:
    app.kubernetes.io/name: c-tv
    app.kubernetes.io/component: coqui-tts
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: c-tv
    app.kubernetes.io/component: coqui-tts
  ports:
  - name: http
    port: 5000
    targetPort: 5000
    protocol: TCP
