c-tv/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: c-tv
  labels:
    app.kubernetes.io/name: c-tv
    app.kubernetes.io/component: redis
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
    name: redis
  selector:
    app.kubernetes.io/name: c-tv
    app.kubernetes.io/component: redis
